--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         <meta name="author" content="Brian E. Bennett" />
     
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,700italic,300,400,800' rel='stylesheet' type='text/css'>
-        <link href="css/normalize.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
     </head>
+    <body>
+        
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script src="js/impress.js"></script>
+    </body>
 </html>
