--- a/index.html
+++ b/index.html
@@ -85,24 +85,19 @@
 			<div class="big bold title">When?</div>
 		</div>
 		
-		<div id="when-things" class="step" data-x="420" data-y="1100" data-scale="1">
-			<div class="big bold">Things to Consider</div>
+		<div id="when-thing1" class="step" data-x="420" data-y="1150" data-scale="1">
+			<div class="big extralight">Not limited to</div>
+                        <div class="big bold" id="when-thing1a">class time</div>
 		</div>
 		
-		<div id="when-thing1" class="step" data-x="420" data-y="1200" data-scale="1">
-			<div class="big extralight">Time &amp; Money</div>
+		<div id="when-thing2" class="step" data-x="420" data-y="1370" data-scale="1">
+			<div class="big extralight">at the point of</div>
+                        <div class="big bold" id="when-thing2a">confusion</div>
 		</div>
 		
-		<div id="when-thing2" class="step" data-x="420" data-y="1300" data-scale="1">
-			<div class="big extralight">Browser Support</div>
-		</div>
-		
-		<div id="when-thing3" class="step" data-x="420" data-y="1400" data-scale="1">
-			<div class="big extralight">Performance</div>
-		</div>
-		
-		<div id="when-thing4" class="step" data-x="420" data-y="1530" data-scale="1">
-			<div class="big extralight">Content</div>
+		<div id="when-thing3" class="step" data-x="420" data-y="1590" data-scale="1">
+			<div class="big extralight">Student directed</div>
+                        <div class="big bold" id="when-thing3a">learning</div>
 		</div>
 		
 		<!--<div id="how" class="step" data-x="1520" data-y="900" data-scale="1">
@@ -154,11 +149,11 @@
 			<div class="big extralight">*Best practices still emerging</div>
 		</div> -->
 		
-		<div id="where" class="step" data-x="2580" data-y="900" data-scale="1">
+		<div id="where" class="step" data-x="1520" data-y="900" data-scale="1">
 			<div class="big bold title">Where?</div>
 		</div>
 		
-		<div class="step where-step" data-x="2580" data-y="1350" data-scale="1">
+		<div class="step where-step" data-x="1520" data-y="1350" data-scale="1">
 			<div class="big" id="where-leaders">Leaders</div>
 			<div class="big extralight" id="where-leader-em">
 				<a href="http://unstoppablerobotninja.com">Ethan Marcotte</a>
@@ -177,7 +172,7 @@
 			</div>
 		</div>
 		
-		<div class="step where-step" data-x="2580" data-y="1980" data-scale="1">
+		<div class="step where-step" data-x="1520" data-y="1980" data-scale="1">
 			<div id="where-learn" class="big">Learn It</div>
 			<div class="big extralight" id="where-learn-t">
 				<a href="http://teamtreehouse.com/library/design-foundations/rwd-foundations">Treehouse</a>
@@ -193,7 +188,7 @@
 			</div>
 		</div>
 		
-		<div class="step where-step" id="where-cool" data-x="2580" data-y="2610" data-scale="1">
+		<div class="step where-step" id="where-cool" data-x="1520" data-y="2610" data-scale="1">
 			<div class="big" id="where-cool-title">Cool Stuff</div>
 			<div class="big extralight" id="where-cool-b">
 				<a href="http://bootstrap.io">Bootstrap</a>
@@ -209,7 +204,7 @@
 			</div>
 		</div>
 		
-		<div class="step where-step" id="where-cool2" data-x="2580" data-y="3190" data-scale="1">
+		<div class="step where-step" id="where-cool2" data-x="1520" data-y="3190" data-scale="1">
 			<div class="big" id="where-cool-title2">More Cool Stuff</div>
 			<div class="big extralight" id="where-cool-r">
 				<a href="http://responsejs.com">response.<span class="adj-j">j</span>s</a>
