--- a/index.html
+++ b/index.html
@@ -107,19 +107,16 @@
 		<div class="step where-step" data-x="1520" data-y="1350" data-scale="1">
 			<div class="big" id="where-leaders">Leaders</div>
 			<div class="big extralight" id="where-leader-em">
-				<a href="http://unstoppablerobotninja.com">Ethan Marcotte</a>
+				<a href="http://scholar.google.com/scholar?q=john+sweller&btnG=&hl=en&as_sdt=0%2C15&as_vis=1">John Sweller</a>
 			</div>
 			<div class="big extralight" id="where-leader-lw">
-				<a href="http://www.lukew.com/ff/">Luke Wroblewski</a>
+				<a href="https://education.arts.unsw.edu.au/about-us/people/paul-ayres/">Paul Ayres</a>
 			</div>
 			<div class="big extralight" id="where-leader-sj">
-				<a href="http://scottjehl.com">Scott <span class="adj-j">J</span>ehl</a>
+				<a href="http://scholar.google.com/citations?user=S0no7b4AAAAJ&hl=en&oi=sra">Fred Paas</a>
 			</div>
 			<div class="big extralight" id="where-leader-jk">
-				<a href="http://adactio.com/articles/"><span class="adj-j">J</span>eremy Keith</a>
-			</div>
-			<div class="big extralight" id="where-leader-cc">
-				<a href="http://css-tricks.com">Chris Coyier</a>
+				<a href="http://scholar.google.com/citations?user=hsDHECkAAAAJ&hl=en&oi=sra">JJG Van Merrienboer</a>
 			</div>
 		</div>
 		
