--- a/index.html
+++ b/index.html
@@ -40,15 +40,6 @@
 			</div>
 		</div>
 		
-		<div id="example" class="step" data-x="2650" data-y="590" data-scale="1">
-			<div class="big bold">
-				<div id="ex1">Consider</div>
-			</div>
-                        <div class="big extralight">
-                            <div id="ex2">the following</div>
-                        </div>
-		</div>
-		
                 <div id="why" class="step" data-x="-1700" data-y="900" data-scale="1">
                     <div class="big bold title">Why?</div>
                 </div>
@@ -120,16 +111,18 @@
 			</div>
 		</div>
 		
-		<!--<div class="step" id="credits" data-x="4000" data-y="0" data-rotate="-90" data-rotate-y="90" data-scale=".1">
+		<div class="step" id="credits" data-x="4000" data-y="0" data-rotate="90" data-rotate-y="90" data-scale=".1">
 			<div class="big bold">Credits</div>
-			<p class="first">an <a href="http://bartaz.github.com/impress.js/">impress.js</a> presentation by <a href="http://twitter.com/johnpolacek">John Polacek</a></p>
-			<p>Responsive Web Design Graphic by <a href="http://bakkenbaeck.com">Bakken &amp; Baeck</a></p>
-			<p>Responsive Web Design Book published by <a href="http://www.abookapart.com">A Book Apart</a></p>
-			<p>Jeremy Keith quote from <a href="http://5by5.tv/webahead">The Web Ahead Podcast</a></p>
-			<p>Jeff Veen quote from a review of <a href="http://www.abookapart.com/products/responsive-web-design">&rsquo;Responsive Web Design&lsquo;</a></p>
-			<p><a href="http://www.google.com/webfonts/specimen/Open+Sans">Open Sans Font</a> by <a href="https://profiles.google.com/107777320916704234605/about">Steve Matteson</a></p>
+			<p class="first"><a href="http://ohheybrian.com">Brian E. Bennett</a></p>
+			<p>@bennettscience</p>
+			<br />
+			<p>Special thanks to <a href="http://www.twitter.com/ramusallam">Ramsey Musallam</a></p>
+			<p>Ramsey's collection of CLT research is available <a href="https://drive.google.com/folderview?id=0B68p5ayLtLuqUnhxZlVnbmZWY00&usp=sharing">online</a></p>
 			<p><a href="http://bartaz.github.com/impress.js/">impress.js</a> created by <a href="http://bartaz.github.com/">Bartek Szopka</a></p>
-		</div>-->
+			<p>This session can be found at</p>
+			<a href="http://dev.ohheybrian.com/cognitive">http://dev.ohheybrian.com/cognitive</a>
+			<p>Grab this presentation layout from <a href="http://www.github.com/bennettscience/cognitive">GitHub</a></p>
+		</div>
 		
 	</div>
         
