--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			<p><a href="http://bartaz.github.com/impress.js/">impress.js</a> created by <a href="http://bartaz.github.com/">Bartek Szopka</a></p>
 			<p>This session can be found at</p>
 			<a href="http://dev.ohheybrian.com/cognitive">http://dev.ohheybrian.com/cognitive</a>
-			<p>Grab this presentation layout from <a href="http://www.github.com/bennettscience/cognitive">GitHub</a></p>
+			<p>Fork this presentation from <a href="http://www.github.com/bennettscience/cognitive">GitHub</a></p>
 		</div>
 		
 	</div>
