--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Reducing Cognitive Load with Video">
         <meta name="author" content="Brian E. Bennett" />
     
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,700italic,300,400,800' rel='stylesheet' type='text/css'>
+        <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,700italic,300,400,800' rel='stylesheet' type='text/css'>
         <link href="css/style.css" rel="stylesheet" />
     </head>
     <body>
@@ -126,7 +126,7 @@
 		
 	</div>
         
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="js/impress.js"></script>
         <script>impress().init();</script>
     </body>
