--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="background"></div>
         
-        <div id="hint">an <a href="http://bartaz.github.com/impress.js/">impress.js</a> presentation by <a href="http://twitter.com/bennettscience">Brian Bennett</a>
+        <div id="hint">an <a href="//bartaz.github.com/impress.js/">impress.js</a> presentation by <a href="//ohheybrian.com">Brian Bennett</a>
 		- use the spacebar or arrow keys to navigate</div>
 	
 	<div id="impress" class="impress-not-supported">
